--- a/css/todo.css
+++ b/css/todo.css
@@ -1,11 +1,15 @@
-li .edit {
+#todo-list li .edit {
     display: none;
 }
 
-li.editing .view {
+#todo-list li.editing .view {
     display: none;
 }
 
-li.editing .edit {
+#todo-list li.editing .edit {
     display: block;
+}
+
+#todo-list li.completed label {
+    text-decoration: line-through;
 }
